@@ -63,8 +63,10 @@ PHP                                                                        NEWS
     arrays). (Nikita)
 
 - Standard:
-  . Fixed #71188 (str_replace converts integers in original $search array to
-    strings). (Laruence)
+  . Fixed bug #71190 (substr_replace converts integers in original $search
+    array to strings). (Laruence)
+  . Fixed bug #71188 (str_replace converts integers in original $search array
+    to strings). (Laruence)
 
 17 Dec 2015, PHP 7.0.1
 
